# python-automation-toolkit

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: development.md  limitations.md  usage_examples.md
examples/sample_files/: README  report.csv
src/automation_toolkit/: __init__.py  api_tools.py  cli.py  csv_tools.py  file_tools.py  rename_tools.py  report_tools.py  text_tools.py
tests/: test_api_tools.py  test_cli.py  test_csv_tools.py  test_file_tools.py  test_rename_tools.py  test_report_tools.py  test_text_tools.py
